--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -115,6 +115,7 @@ button
 .container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .right-info .right-btn
 .song-playbtn
 .officialAccount-showContent-btn
+.tag-channel-pane .channel-btns .no-subs
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -239,6 +240,7 @@ button
 .follow-container .follow-right .unfollow-btn
 .wide-members .avatar-list i
 .is-web .submit-button.disabled
+.tag-channel-pane .channel-btns__link
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
