--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -52,6 +52,7 @@
 .bui-radio.bui-dark .bui-radio-button .bui-radio-input:checked+.bui-radio-label
 .bui-switch .bui-checkbox:checked+.bui-body
 .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize']
+.s_tag .btn-add:hover span
 	background-color var(--c-accent) !important
 
 .bilibili-player-video-wrap a
@@ -76,6 +77,7 @@
 .bilibili-player-feedback-title .bilibili-player-feedback-title-content
 .main-container .season-list .ss-list-wrapper .ss-item .ss-info .ss-title
 .main-container .recom-wrapper .recom-title
+.tag-channel-pane .channel-title
 	color var(--c-title) !important
 
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
@@ -101,6 +103,7 @@ ul.star-wrapper li i
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
 .bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip
+.bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize'] .selection-name
 	color var(--c-white) !important
 
 .coin-operated-m .coin-title span
@@ -131,10 +134,12 @@ ul.star-wrapper li i.icon-star-full
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management>:hover i
 .bui-select.bui-select-quality-menu .bui-select-item.bui-select-item-active span
 .bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-label
+.bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row.mode .selection-span.active .selection-name
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
 .bilibili-player-feedback-title
+.tag-channel-pane .channel-cover
 	border-color var(--c-border) !important
 
 .bilibili-player .bilibili-player-video-control .bilibili-player-video-btn-menu-list.bilibili-player-active:before
@@ -190,7 +195,8 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-block-filter-image:hover .bp-svgicon svg
 .bilibili-player-iconfont:hover .bp-svgicon svg
 .bilibili-player-iconfont:hover .bp-svgicon svg g
-.bilibili-player-video-btn:hover .bp-svgicon svg
+.bilibili-player-video-btn:hover .bilibili-player-iconfont-danmakutype .bp-svgicon svg
+.bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row.mode .selection-span.active .bp-svgicon svg
 .selection-icon:hover .bp-svgicon svg
 .bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-image .bp-svgicon svg
 .bilibili-player-video-danmaku-switch:hover .bp-svgicon svg
@@ -222,6 +228,7 @@ ul.star-wrapper li i.icon-star-full
 .main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list
 .main-container .ep-list-wrapper
 .ep-section-module
+.tag-channel-pane
 	border 1px solid var(--c-border) !important
 	background-color var(--c-background) !important
 
