--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -97,6 +97,7 @@
 .rank-vedio-target-item .item-list li+li .item-wrap:after
 .rank-vedio-view-item .item-list li+li .item-wrap:after
 .comment_wrap .operate_wrap .operate_right .operate-txt:not(:last-child):after
+.text-split_wrap .operate-txt:not(:last-child):after
   background-color var(--c-border) !important
 
 .echarts
@@ -105,6 +106,7 @@
 body
   background-color var(--c-bg-mask) !important
 
+#app.home
 .cc-body
 #bili-data-center
 #audience-page
@@ -195,6 +197,7 @@ body
 
 .link-top-container .link-top-item.active .red_point
 .echarts div
+.article-card.v2 .meta-view .bili-btn:hover .bcc-iconfont
   color var(--c-white) !important
 
 .calendarEntry_box .greetings .greet-num
