--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -203,6 +203,7 @@ textarea
 .action-menu .menu-list
 .sub-nav-m .tips
 .comment-bilibili-con
+.follow-dialog-wrap .follow-dialog-window
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
