--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -55,6 +55,7 @@ select
   color var(--c-text) !important
 
 .el-radio-button.is-active .el-radio-button__inner
+.link-toast .toast-text
   color var(--c-white) !important
 
 .ui-select .ul-select-list .select-item.active
