--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -125,6 +125,7 @@ button
   cursor pointer
 
   span
+  i.bcc-iconfont
     color var(--c-white) !important
 
   &::after
@@ -143,6 +144,7 @@ button
     color var(--c-white) !important
 
     span
+    i.bcc-iconfont
       color var(--c-white) !important
 
     &::after
@@ -248,6 +250,7 @@ button
   transition all 0.3s ease-in-out
 
   span
+  i.bcc-iconfont
     color var(--c-text) !important
 
   &::after
@@ -259,6 +262,7 @@ button
     color var(--c-text) !important
 
     span
+    i.bcc-iconfont
       color var(--c-text) !important
 
 .paging-box-big .dian
