--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -3,6 +3,7 @@
 .user-card-m iframe
 .bili-msg iframe
 .collection-m .layout
+.follow-dialog-wrap .follow-dialog-window .layout
 	display none
 
 .bili-header-m .nav-menu .up-load .u-link
@@ -32,6 +33,8 @@
 #bofqi.mini-player .drag-bar
 .video-page-card .card-box .pic-box
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .input-group
+.follow-dialog-wrap .follow-dialog-window .content .group-list ul .follow-group-mask
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
@@ -45,6 +48,7 @@
 .comment-m .comment
 .player-module #bofqi.stardust-player
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .input-group input
 	background-color transparent !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
@@ -99,6 +103,7 @@ ul.star-wrapper li i
 .multi-page .head-con .range-box i
 .coin-dialog-mask .coin-operated .coin-title
 .main-container .media-info .media-right .media-count
+.follow-dialog-wrap .follow-dialog-window .content .info
 	color var(--c-text) !important
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
@@ -140,7 +145,13 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-feedback
 .bilibili-player-feedback-title
 .tag-channel-pane .channel-cover
+.follow-dialog-wrap .follow-dialog-window .title
+.follow-dialog-wrap .follow-dialog-window .bottom
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .add-btn
 	border-color var(--c-border) !important
+
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .input-group
+	border-color var(--c-accent) !important
 
 .bilibili-player .bilibili-player-video-control .bilibili-player-video-btn-menu-list.bilibili-player-active:before
 	border-color transparent transparent transparent var(--c-accent)
