--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -116,6 +116,9 @@ button
 .song-playbtn
 .officialAccount-showContent-btn
 .tag-channel-pane .channel-btns .no-subs
+.twp-mask .twp-wrapper .twp-container .twp-btns .twp-btn.pack
+.twp-mask .twp-wrapper .twp-container .twp-btns .twp-btn.pay
+.pwp-modal-mask .pwp-modal-wrapper .pwp-btn.primary
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
