--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -204,6 +204,8 @@ textarea
 .sub-nav-m .tips
 .comment-bilibili-con
 .follow-dialog-wrap .follow-dialog-window
+.twp-mask .twp-wrapper
+.pwp-modal-mask .pwp-modal-wrapper
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
