--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -57,7 +57,7 @@
 		opacity 1
 		transform translateY(0)
 
-	for n in 2 3 4 5 6 7
+	for n in 2 3 4 5 6 7 8
 		&:nth-child({n})
 			transition-delay 0.05s * (n - 1)
 
